Delete vercel file from backend

--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,5 @@
 MONGODB_URI= "mongodb+srv://tradejiinfo:tradejians23@cluster0.xqgr9.mongodb.net"
 JWT_SECRET= "ans23"
+CLOUDINARY_API_KEY = "749226437212781"
+CLOUDINARY_SECRET_KEY = "_uQ0Gv9dnuhNzXAozJioo0G7jJk"
+CLOUDINARY_NAME = "dgaiclbtx"
